<resources>
    <string name="app_name">Extrieve Demo</string>
    <string name="thumb_1_title">Capture Document</string>
    <string name="thumb_2_title">Compress Document</string>
    <string name="thumb_3_title">QR Code/BAR Code</string>
    <string name="thumb_4_title">Device Guard</string>
    <string name="thumb_5_title">Face Detect &amp; Match</string>
    <string name="thumb_6_title">Build PDF &amp; TIFF</string>
    <string name="thumb_7_title">Location Utility</string>
    <string name="thumb_8_title">Aadhaar Masking Test</string>
    <string name="thumb_9_title">General Doc Analysis</string>
    <string name="thumb_10_title">More</string>
    <string name="Default">Default</string>
    <string name="showdialogue">show dialogue</string>
    <string name="share">Share</string>
    <string name="Print">Print</string>
    <string name="ShowSingle">Show Single</string>
    <string name="GetInfo">Get Information</string>
    <string name="Delete">Delete</string>
    <string name="Mask">Mask Image</string>
    <string name="ShowMore">Show More</string>
    <string name="ShowSettings">Show Settings</string>
    <string name="version_2_0_0">Version : 2.0.0</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="reset_to_default_settings">Reset To Default Settings</string>
    <string name="more">MORE</string>
    <string name="select_id_capture_mode_to_capture_id_s">Select ID capture mode to capture id\'s</string>
    <string name="id_capture">ID capture</string>
    <string name="capture_review_mode">Capture Review Mode:</string>
    <string name="select_auto_capture_type">Select auto capture type</string>
    <string name="auto_capture_type">Auto Capture Type</string>
    <string name="select_document_detection_sensitivity">Select document detection sensitivity</string>
    <string name="document_detection_sensitivity">Document detection sensitivity</string>
    <string name="select_capture_color_mode">Select capture color mode</string>
    <string name="capture_color">Capture color</string>
    <string name="select_crop_filter_for_image_cropping">Select crop filter for image cropping</string>
    <string name="crop_filter">Crop filter</string>
    <string name="select_auto_capture_crop_mode">Select auto capture-crop mode</string>
    <string name="capture_mode">Capture Mode</string>
    <string name="capture_modes">CAPTURE MODES</string>
    <string name="view_saved_documents">View Saved Documents</string>
    <string name="default_downloads_change_to_documents">Default: downloads, change to documents</string>
    <string name="output_directory">Output directory</string>
    <string name="save_app_gallery_images_to_system_gallery">Save app gallery images to system gallery</string>
    <string name="enable_save_to_gallery">Enable save to gallery</string>
    <string name="document">DOCUMENT</string>
    <string name="select_page_dpi_for_capture">Select page DPI for capture</string>
    <string name="page_dpi">Page DPI</string>
    <string name="select_page_quality_for_capture">Select page quality for capture</string>
    <string name="page_quality">Page quality</string>
    <string name="select_page_layout_for_capture">Select page layout for capture</string>
    <string name="page_layout">Page layout</string>
    <string name="page">PAGE</string>
    <string name="select_max_pages_per_capture">Select max pages per capture</string>
    <string name="maximum_pages">Maximum pages</string>
    <string name="only_system_options_can_access">Only system options can access</string>
    <string name="system_camera">System camera</string>
    <string name="show_capture_count">Show capture count</string>
    <string name="capture_count">Capture count</string>
    <string name="enable_camera_capture_sound">Enable camera capture sound</string>
    <string name="capture_sound">Capture sound</string>
    <string name="show_camera_flash_option_in_capture_ui">Show camera flash option in capture UI</string>
    <string name="capture_flash">Capture flash</string>
    <string name="show_list_of_document_type_available_in_sdk">show list of document type available in SDK</string>
    <string name="document_type">Document Type</string>
    <string name="show_camera_toggle_option_in_capture_ui">Show camera toggle option in capture UI</string>
    <string name="camera_toggle">Camera toggle</string>
    <string name="camera">CAMERA</string>
    <string name="settings">Settings</string>
    <string name="copyright">Copyright © 1996 – 2026 Extrieve® Technologies. \n All Rights Reserved</string>
    <string name="copyright_title">Extrieve Demo App for SDK UseCase</string>
    <string name="quickcapture_doc_scan">Extrieve Demo</string>
    <string name="file_name">File Name</string>
    <string name="select_all">Select All</string>
    <string name="face_identification_and_matching">Face Identification and Matching</string>
    <string name="add_document">Add Document</string>
    <string name="match_face">Match Face</string>
    <string name="setting">Setting</string>
    <string name="load_image">Load Image</string>
    <string name="capture">Capture</string>
    <string name="output">Download</string>
    <string name="delete">Delete</string>
    <string name="qr_bar_code_generate">Optical Code (QR/BAR) Generation</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="generate_bar_code">Generate BAR Code</string>
    <string name="save">Save</string>
    <string name="enter_the_data_to_generate_qr_bar_code">Enter the data to generate QR/BAR Code</string>
    <string name="sdk_info">SDK Info</string>
    <string name="device_info">Device Info</string>
    <string name="develop">Documentation</string>
    <string name="about">About Us</string>
    <string name="contact">Contact Us</string>
    <string name="exit">Exit</string>
    <string name="kyc_document_analysis">KYC Document Analysis</string>
    <string name="detect">Detect</string>
    <string name="extract">Extract</string>
    <string name="verify">Verify</string>
    <string name="data">DATA</string>
    <string name="json">JSON</string>
    <string name="imgDescription">imgDescription</string>
    <string name="no_data_found">No data found</string>
    <string name="doc_analyse">General DocAnalyse Test</string>
    <string name="edittext_hint">Enter the value</string>
    <string name="general_document_analysis">General Document Analysis</string>
    <string name="loaderText">Analyzing document</string>
    <string name="use_cases">Use case samples</string>
    <string name="asset_capture">Asset Capture</string>
    <string name="document_capture">Document Capture</string>
    <string name="aadhaar_masking">Aadhaar Masking</string>
    <string name="kyc_extraction">KYC Extraction</string>
    <string name="show_setting">Settings</string>
    <string name="disable_screen_capture">Screen capture &amp; record</string>
    <string name="disable_cr_screen">Disable capturing and recording of screen</string>
    <string name="security_report">🛡️ Security Report</string>
    <string name="avoid_app_access">AVOID APP ACCESS</string>
    <string name="note_security">To continue using this app, please disable the above risk factors from system settings and relaunch the app.</string>
    <string name="monitor_threats_txt">Monitor threats in real time while running app</string>
    <string name="real_time_monitor">Real-Time Threat Monitor</string>
    <string name="loading_text">---</string>
    <string name="digi_pin">DigiPin</string>
    <string name="digi_pin_desc">Verification that the address exists and is correctly located</string>
    <string name="lla">Coordinates</string>
    <string name="lla_desc">Latitude and longitude represent your location. Accuracy shows precision in meters.</string>
    <string name="pin_code">Postal PIN Code</string>
    <string name="pin_code_desc">PIN Code identifies a broader delivery region used in traditional addressing systems. It is helpful for logistics and postal services, but may not always be available for GPS-based locations.</string>
    <string name="location_str">Location</string>
    <string name="utility_str">Utility</string>
    <string name="custom_digi_pin">Generate DigiPin using Latitude &amp; Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="accuracy">GPS Accuracy: </string>
    <string name="fetched">Last fetched: </string>
    <string name="generate_digi_pin">Generate DigiPin</string>
    <string name="loading_text_digi_pin">Fetching DigiPin</string>
    <string name="get_current_digi_pin">Get DigiPin</string>
    <string name="get_current_location">Get Location</string>
    <string name="get_current_pin_code">Get PIN Code</string>
    <string name="view_on_map">View Map</string>
    <string name="dg_desc1">Protects financial/ mission critical apps by detecting rooted devices, emulators, VPN usage, debugging tools, ADB access and location spoofing.</string>
    <string name="dg_desc2">Prevents screenshots and screen recordings to protect sensitive financial/ mission critical data.</string>
    <string name="enable_dg1">Enable Device Guard</string>
    <string name="enable_dg2">Enable Screen Protection</string>
    <string name="dg_ss">Security Status</string>
    <string name="pin_subtext">Broad regional delivery code</string>
    <string name="custom_generate">Custom Generate</string>
    <string name="your_unique_id">YOUR DIGI PIN</string>
    <string name="universal_digital_location_code">Precise, geo-coded digital address identifier</string>
    <string name="m_4">4x4m</string>
    <string name="device_str">Device</string>
    <string name="guard_str">Guard</string>
    <string name="dg_status_title">Verify Integrity</string>
    <string name="dg_status_subtitle">Confirm that the device hosting your application satisfies all security and audit requirements for regulated &amp; mission-critical apps.</string>
    <string name="dg_status_btn">Verify</string>
    <string name="pass">☑ Pass</string>
    <string name="fail">☒ Fail</string>
    <string name="policy_violation_detected">⚠ Policy Violation Detected</string>
    <string name="policy_audit">Policy Audit</string>
    <string name="data_shield">Data Shield</string>
    <string name="policy_audit_subtitle">Continuous runtime integrity check.</string>
    <string name="data_shield_subtitle">Prevent visual hijacking like screen record.</string>
    <string name="integrity_report">Integrity Report</string>
    <string name="integrity_report1">LIVE</string>
    <string name="root_integrity">Root Integrity</string>
    <string name="root_integrity_desc">Device security verified. No root access detected.</string>
    <string name="hardware_attestation">Hardware Attestation</string>
    <string name="hardware_attestation_desc">Device signature matches physical hardware</string>
    <string name="debug_interface">Debug Interface</string>
    <string name="debug_interface_desc">USB debugging enabled. High data ex-filtration risk</string>
    <string name="network_traffic">Network Traffic</string>
    <string name="network_traffic_desc">Direct connection. No hooks detected.</string>
    <string name="location_services">Location Services</string>
    <string name="location_services_desc">GNSS data authenticity verified.</string>
    <string name="device_specifications">Device Specifications</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="os_release">OS Release</string>
    <string name="sdk_int">SDK Int</string>
    <string name="cpu_hardware">CPU Hardware</string>
    <string name="total_ram_mb">Total RAM (MB)</string>
    <string name="free_storage_gb">Free Storage (GB)</string>
    <string name="battery">Battery %</string>
    <string name="is_charging">Is Charging</string>
</resources>