<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/sdkInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_margin="10dp"
            android:src="@drawable/info"
            app:tint="@color/secondary"/>
        <TextView
            android:id="@+id/sdkInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/sdk_info" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/deviceInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageView
            android:layout_width="23dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:src="@drawable/deviceinfo"
            app:tint="@color/secondary"/>
        <TextView
            android:id="@+id/deviceInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/device_info" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_margin="10dp"
            android:src="@drawable/privacy_setting"
            app:tint="@color/secondary"/>

        <TextView
            android:id="@+id/privacyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/privacy_policy" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_margin="10dp"
            android:src="@drawable/about"
            app:tint="@color/secondary"/>
        <TextView
            android:id="@+id/aboutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/about" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_margin="10dp"
            android:src="@drawable/exit"
            app:tint="@color/secondary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/exit" />
    </LinearLayout>
</LinearLayout>